gcl (2.6.1-27) unstable; urgency=low

  * Modify default banner slightly

 -- Camm Maguire <camm@enhanced.com>  Thu, 26 Feb 2004 15:31:07 +0000

gcl (2.6.1-26) unstable; urgency=low

  * Rework compiler::*ld-libs*, compiler::link, and unixport/makefile to
    accomodate mingw need for firstfile.o and lastfile.o
  * Remove incompatible -fomit-frame-pointer when compiling with -pg
    profiling
  * Load sys-proclaim.lisp files forimproved linking and smaller object
    size across the board, install same for use with compiler::link
  * Use pathnames instead of strings in compiler::link, also in image
    init files, for Windows
  * small mod to unixport/makefile re filtering of firstfile and
    lastfile
  * Backport zero divisor error cnditions from HEAD for
    floor,ceiling,truncate
  * Default to debug mode on hppa to work around gcc compiler
    optimization bugs
  * Add missing m4 and automake files in binutils directory to enable
    automake and autoconf here
  * Add mach-o specific files from cvs head to local bfd tree
  * Add bfd/po makefiles
  * Macosx defaults in configure.in
  * bfd make and configure file changes to handle mach-o backend
  * *gcl-version* -> *gcl-minor-version*,*gcl-extra-version*
  * Support for more informative banner reading features list
  * Support for both sigbus and sigsegv in sgbc.c as is customary in .h
    files
  * mach-o compatible changes in sfaslbfd.c
  * Support for new debugging section names in sfaslelf.c
  * powerpc-macosx h and defs files from cvs head

 -- Camm Maguire <camm@enhanced.com>  Wed, 25 Feb 2004 23:08:59 +0000

gcl (2.6.1-25) unstable; urgency=low

  * rl_putc_em a carriage return after invoking readline to ensure the
    prompt in rl_putc_em_line is cleared.
  * use standard sgc fault recovery element for hppa as recommended by
    hppa kernel experts
  * Store banner in si::*system-banner* for possible modification
  in compatibly licensed programs