@@ -1,8 +1,11 @@
 gcl (2.6.1-27) unstable; urgency=low
 
   * Modify default banner slightly
+  * Homebrew plt-like mechanism for ensuring that valid internal
+    addresses exist to which undefined symbols in compiled lisp objects
+    referring to external shared libraries can be relocated
 
- -- Camm Maguire <camm@enhanced.com>  Thu, 26 Feb 2004 15:31:07 +0000
+ -- Camm Maguire <camm@enhanced.com>  Fri, 27 Feb 2004 23:41:06 +0000
 
 gcl (2.6.1-26) unstable; urgency=low
 
